# media-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/backend/: BackendFactory.cpp  BackendFactory.hpp  IMediaBackend.hpp
src/backend/youtube/: YouTubeBackend.cpp  YouTubeBackend.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/: Application.cpp  Application.hpp  MediaInfo.hpp  Types.hpp
src/favorite/: FavoriteManager.cpp  FavoriteManager.hpp
src/history/: HistoryManager.cpp  HistoryManager.hpp
src/player/: IMediaPlayer.hpp  PlayerFactory.cpp  PlayerFactory.hpp
src/player/mpv/: MpvPlayer.cpp  MpvPlayer.hpp
src/ui/: AboutView.cpp  AboutView.hpp  App.cpp  App.hpp  FavoritesView.cpp  FavoritesView.hpp  HistoryView.cpp  HistoryView.hpp  MainMenu.cpp  MainMenu.hpp  ResultsView.cpp  ResultsView.hpp  SearchView.cpp  SearchView.hpp  SettingsView.cpp  SettingsView.hpp  Theme.hpp  VideoMenu.cpp  VideoMenu.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp  Process.cpp  Process.hpp
